<resources>
    <string name="app_name">MelodiaApp</string>
    <string name="app_title">Melodia\n Vive tu música</string>
    <string name="app_login">Iniciar Sesión</string>
    <string name="app_register">Registrarse</string>
    <string name="LogIn_step1">Introduce tus credenciales</string>
    <string name="LogIn_error">Usuario o contraseña incorrectos</string>
    <string name="LogIn_recover"><u>He olvidado mi contraseña</u></string>
    <string name="LogIn_enter">Acceder</string>
    <string name="LogIn_hint">Contraseña</string>
    <string name="Menu_Search" fontFamily="Arial">Buscar</string>
    <string name="Menu_SearchConfirm">🔍</string>
    <string name="Menu_Folders">Mis Carpetas</string>
    <string name="Menu_Playlist">Mis Listas</string>
    <string name="Register_step1">Introduce tu correo</string>
    <string name="Register_step2">Introduce tu \n nombre de usuario</string>
    <string name="Register_error">Error al registrar el usuario</string>
    <string name="Username_hint">Usuario</string>
    <string name="Register_step3">Introduce tu contraseña</string>
    <string name="PasswordRecover_title">Recuperar contraseña</string>
    <string name="PasswordRecover_sendCode">Enviar código</string>
    <string name="Menu_Favourites">Fav</string>
    <string name="Menu_Random">♫ Aleatoria</string>
    <string name="Menu_Social">Social</string>
    <string name="Menu_addFriends">Añadir\n amigos</string>
    <string name="Menu_top10">Top 10</string>
    <string name="Menu_addFriends2">Añadir amigos</string>
    <string name="quantity_Placeholder">X.X</string>
    <string name="song_placeholder">Canción</string>
    <string name="CC_title">Añadir carpeta</string>
    <string name="CC_hint">Nombre carpeta</string>
    <string name="CC_crear">Crear carpeta</string>
    <string name="carpeta_masCarpetas">Añadir carpeta</string>
    <string name="player_author">Autor:</string>
    <string name="player_genre">Género:</string>
    <string name="text_placeholder">Lorem Ipsum</string>
    <string name="text_placeholder_long">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </string>
    <string name="PasswordRecoverCode_codeHint">Código de verificación</string>
    <string name="PasswordRecoverCode_paswd">Nueva contraseña</string>
    <string name="PasswordRecoverCode_repeatPaswd">Repetir contraseña</string>
    <string name="PasswordRecoverCode_changePaswd">Cambiar contraseña</string>
    <string name="Profile_changePassword">Cambiar contraseña</string>
    <string name="Profile_artist">Ser artista</string>
    <string name="Profile_upload">Subir canción</string>
    <string name="Profile_subscribe">Suscribirme</string>
    <string name="Profile_singOut">Cerrar sesion</string>
    <string name="Profile_audioCuality">Calidad de audio:</string>
    <string name="Profile_radioHD">Alta fidelidad</string>
    <string name="Profile_radioLD">Baja fidelidad</string>
    <string name="CP_title">Añadir lista de audio</string>
    <string name="CP_hint">Nombre lista</string>
    <string name="CP_crear">Crear lista</string>
    <string name="CP_public">Pública</string>
    <string name="CP_private">Privada</string>
    <string name="CP_playlistType">Elige la visibilidad de la lista</string>
    <string name="BecomeArtist_title">Solicitud de ser artista</string>
    <string name="UploadAudio_title">Subir canción</string>
    <string name="Upload_reason">Explique brevemente en un \nparrafo quien es y porque desea \nconvertirse en artista</string>
    <string name="Upload_send">Solicitar</string>
    <string name="FavoritesList">Favoritos</string>
    <string name="Notifications">Notificaciones</string>
    <string name="Admin_title">Administración</string>
    <string name="Admin_artist">Nuevos\n Artistas</string>
    <string name="Admin_views">Escuchas\n totales</string>
    <string name="Admin_list">Crear lista global</string>
    <string name="Reproduction_titleArtist">Reproducciones</string>
    <string name="Reproduction_titleAdmin">Reproducciones totales</string>
    <string name="Results_title">Resultados: </string>
    <string name="Results_orderName">Ordenar por\nnombre </string>
    <string name="Results_orderGenre">Ordenar por\ngénero </string>
    <string name="Results_orderArtist">Ordenar por\nartista </string>
    <string name="AddFriend_hint">Introduce el alias\n de tu amigo</string>
    <string name="AddFriend_add">Añadir</string>
    <string name="AllSeconds_title">Segundos reproducidos\n por día</string>
    <string name="AllSeconds_Today">Hoy:            </string>
    <string name="AllSeconds_aDago">Hace un dia     </string>
    <string name="AllSeconds_2Dago">Hace dos dias   </string>
    <string name="AllSeconds_3Dago">Hace tres dias  </string>
    <string name="AllSeconds_4Dago">Hace cuatro dias</string>
    <string name="AllSeconds_5Dago">Hace cinco dias </string>
    <string name="AllSeconds_6Dago">Hace seis dias  </string>
</resources>