<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LogIn">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/app_login"
            android:textColor="@color/regular_text"
            android:textSize="24pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/LogIn_step1"
            android:textColor="@color/regular_text"
            android:textSize="12pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
        android:id="@+id/inEmail"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/regular_text"
        android:ems="10"
        android:hint="e-mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/regular_text"
        android:textColorHint="@color/regular_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inPasswd"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/regular_text"
        android:ems="10"
        android:hint="@string/LogIn_hint"
        android:inputType="textPassword"
        android:textColor="@color/regular_text"
        android:textColorHint="@color/regular_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inEmail" />

    <TextView
        android:id="@+id/iForgor"
        android:layout_width="303dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/LogIn_recover"
        android:textColor="@color/regular_text"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bAcceder" />

    <TextView
        android:id="@+id/bAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/button1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/LogIn_enter"
        android:textColor="@color/button_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inPasswd" />

        <TextView
            android:id="@+id/hiddenLoginError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LogIn_error"
            android:textColor="@color/error_red"
            android:textSize="10pt"
            app:layout_constraintBottom_toTopOf="@+id/bAcceder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inPasswd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>