<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="42dp"
        tools:context=".Register">


    <TextView
        android:id="@+id/regTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/app_register"
        android:textSize="24pt"
        android:textColor="@color/regular_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RegStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/Register_step1"
        android:textColor="@color/regular_text"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regTitle" />

    <EditText
        android:id="@+id/inEmailReg"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/regular_text"
        android:ems="10"
        android:hint="e-mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/regular_text"
        android:textColorHint="@color/regular_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegStep1" />

    <EditText
        android:id="@+id/inPasswdReg"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/regular_text"
        android:ems="10"
        android:hint="@string/LogIn_hint"
        android:inputType="textPassword"
        android:textColor="@color/regular_text"
        android:textColorHint="@color/regular_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegStep3" />

    <TextView
        android:id="@+id/RegStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/Register_step2"
        android:textColor="@color/regular_text"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inEmailReg" />

    <EditText
        android:id="@+id/inUserName"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/regular_text"
        android:ems="10"
        android:hint="@string/Username_hint"
        android:textColor="@color/regular_text"
        android:textColorHint="@color/regular_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegStep2" />

    <TextView
        android:id="@+id/RegStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/Register_step3"
        android:textColor="@color/regular_text"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inUserName" />

    <TextView
        android:id="@+id/bRegisterConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/app_register"
        android:textColor="@color/button_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inPasswdReg" />

        <TextView
            android:id="@+id/hiddenRegisterError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_error"
            android:textColor="@color/error_red"
            android:textSize="10pt"
            app:layout_constraintBottom_toTopOf="@+id/bRegisterConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inPasswdReg" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>