<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CreatePlaylist">

    <ImageView
        android:id="@+id/imageHomeCPlaylist"
        android:layout_width="97dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/profileIconAcreatePlaylist"
        android:layout_width="101dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profileicon" />

    <ImageView
        android:id="@+id/bellIconAcreatePlaylist"
        android:layout_width="54dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/profileIconAcreatePlaylist"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bell" />

    <TextView
        android:id="@+id/titleCPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:text="@string/CP_title"
        android:textColor="@color/regular_text"
        android:textSize="24pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inPlaylistName"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/regular_text"
        android:ems="10"
        android:hint="@string/CP_hint"
        android:textColor="@color/regular_text"
        android:textColorHint="@color/regular_text"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCPlaylist" />

    <TextView
        android:id="@+id/bCrearLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:background="@drawable/button1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/CP_crear"
        android:textColor="@color/button_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inPlaylistName" />

    <TextView
        android:id="@+id/playlistType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/CP_playlistType"
        android:textColor="@color/regular_text"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bCrearLista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonPrivate"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/CP_private"
            android:textColor="@color/regular_text"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radioButtonPublic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CP_public"
            android:textColor="@color/regular_text"
            android:textSize="20dp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>